# StudentManagement

./: .gitignore  CMakeLists.txt  FileManagement.c  FileManagement.h  SearchStudent.c  SearchStudent.h  SortStudent.c  SortStudent.h  StudentManagement.c  StudentManagement.h  UI.c  UI.h  Util.c  Util.h  main.c
